welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: value aig is not a member of Int
		else if (x==getMondeLargeur()-1 && aig==0) {y=y+1 aig=1}
                                                                  ^ZigZag:16: error: value aig is not a member of Int
		else if (x==0 && aig==1) {y=y+1 aig=0}
                                                ^